어린이집, 유치원 비교 완성 / 이다영 / 02-14 21:56
[주요 내용]

- 비교 화면 관련 코드 수정
- 메인 화면 불편사항 링크 연결

--- a/src/main/resources/static/css/compare.css
+++ b/src/main/resources/static/css/compare.css
@@ -106,6 +106,10 @@ thead td h3 {
     height: 35px;
 }
 
+td {
+    word-wrap: break-word;
+}
+
 .compare-table .btn-primary {
     color: #fff !important;
     border-color: var(--clr-pink-1);
