--- a/src/main/resources/templates/compare-nursery.html
+++ b/src/main/resources/templates/compare-nursery.html
@@ -165,6 +165,13 @@
     		}
     	}
     	
+   		nsItems = /*[(${info})]*/{};
+   		
+   		console.log(nsItems);
+   		
+ 		tableSetting(nsCat, nsItemTitle, nsItems);
+ 		handleItemTitle(nsCat, nsItemTitle);
+   		
     	/* ===== 카카오지도 ===== */
     	// 검색 결과
     	var searchList = [
