--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -582,7 +582,7 @@
                     어린이집·유치원에서 불편을 겪고 있다면 <br/>
                     지금 바로 신고하세요.
                   </p>
-                  <a class="btn btn-primary stretched-link mt-4 mb-2" href="claim-main.html">불편사항신고</a>
+                  <a class="btn btn-primary stretched-link mt-4 mb-2" href="/kinder-main">불편사항신고</a>
                 </div>
               </div>
             </div>
