mypage - 선생님 창 수정 / 조규완 / 02-14 22:21 [상세내용] mypage 2, 4 선생님 창 수정 mypage 7 장바구니 대여중목록 체크불가

--- a/src/main/resources/static/css/cgw.css
+++ b/src/main/resources/static/css/cgw.css
@@ -308,6 +308,11 @@
     margin-right: 2rem !important;
     margin-left: 2rem !important;
   }
+  
+  .cgw32 {
+  	filter: blur(5px);
+    -webkit-filter: blur(5px);
+  }
 
   .btn-primary-cgw1 {
     color: rgb(255, 255, 255);
