--- a/src/main/resources/templates/mypage-4.html
+++ b/src/main/resources/templates/mypage-4.html
@@ -498,24 +498,24 @@
 		          <th:block th:if="${tklist.size != 0}">
 		         <nav class="d-flex justify-content-between pt-2 cgw31" aria-label="Page navigation">
 		            <ul class="pagination" id="prev">
-		              <li class="page-item"><button class="page-link" th:onclick="|movetNPage('/mypage-4?tnPage=${tnPageInfo.prevPage}');|"><i class="ci-arrow-left me-2"></i>Prev</button></li>
+		              <li class="page-item"><button class="page-link" th:onclick="|movetKPage('/mypage-4?tkPage=${tkPageInfo.prevPage}');|"><i class="ci-arrow-left me-2"></i>Prev</button></li>
 		            </ul>
 		            <ul class="pagination">
 		              <li class="page-item d-sm-none"><span class="page-link page-link-static">1 / 5</span></li>
 		              
-		              <th:block th:each="num, status : ${#numbers.sequence(tnPageInfo.startPage, tnPageInfo.endPage)}">
-			                	<th:block th:if="${status.current == tnPageInfo.currentPage}">
+		              <th:block th:each="num, status : ${#numbers.sequence(tkPageInfo.startPage, tkPageInfo.endPage)}">
+			                	<th:block th:if="${status.current == tkPageInfo.currentPage}">
 					                <li class="page-item d-none d-sm-block page" aria-current="page">
 					                  <span class="page-link">[[${status.current}]]<span class="visually-hidden">(current)</span></span>
 					                </li>
 			                	</th:block>
-			                	<th:block th:if="${status.current != tnPageInfo.currentPage}">
-					                <li class="page-item d-none d-sm-block"><button class="page-link" th:onclick="|movetNPage('/mypage-4?tnPage=${status.current}');|">[[${status.current}]]</button></li>
+			                	<th:block th:if="${status.current != tkPageInfo.currentPage}">
+					                <li class="page-item d-none d-sm-block"><button class="page-link" th:onclick="|movetKPage('/mypage-4?tkPage=${status.current}');|">[[${status.current}]]</button></li>
 			                	</th:block>
 			                </th:block>
 		            </ul>
 		            <ul class="pagination">
-		              <li class="page-item"><button class="page-link" th:onclick="|movetNPage('/mypage-4?tnPage=${tnPageInfo.nextPage}');|" aria-label="Next">Next<i
+		              <li class="page-item"><button class="page-link" th:onclick="|movetKPage('/mypage-4?tkPage=${tkPageInfo.nextPage}');|" aria-label="Next">Next<i
 		                    class="ci-arrow-right ms-2"></i></button></li>
 		            </ul>
 		          </nav>  
@@ -554,7 +554,9 @@
 	<script type="text/javascript">
 		nPage = '[[${nPageInfo.currentPage}]]'; 
 	    kPage = '[[${kPageInfo.currentPage}]]';
-	    function moveNPage(pageUrl){
+		tnPage = '[[${tnPageInfo.currentPage}]]';
+	    tkPage = '[[${tkPageInfo.currentPage}]]';
+		function moveNPage(pageUrl){
 			pageUrl += '&nPage=' + nPage 
 			location.href = encodeURI(pageUrl);	
 		}
