게시판/박태성/02-14 23:32 [상세 내용] 게시글 수정 기능 완성

--- a/src/main/resources/templates/community.html
+++ b/src/main/resources/templates/community.html
@@ -26,6 +26,8 @@
     <link rel="stylesheet" media="screen" href="/css/header.css">
     <link rel="stylesheet" media="screen" href="/css/footer.css">
     <link rel="stylesheet" media="screen" href="/css/community.css">
+    
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
   </head>
 
   <!-- Body-->
