--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
   <head>
     <meta charset="utf-8">
     <title>UKIDS | 글수정</title>
@@ -98,6 +98,8 @@
     <div class="container-sm ps-0 pe-0  rounded ">
       <div class="m-3 pt-3 pb-2 shadow-lg">
         <form action="/community/update" method="post" enctype="multipart/form-data">
+        <input type="hidden" name="type" th:value="${type}">
+        <input type="hidden" name="boardNo" th:value="${board.boardNo}">
           <table class="table " style="border-color: white;">
             <thead>
               <tr>
@@ -112,24 +114,30 @@
               <tr>
                 <th class="col2-1 align-middle text-center">작성자</th>
                 <th class="col-5 text-center">
-                <input class="form-control" type="text" name="id" value="${board.id}" readonly>
+                <input class="form-control" type="text" name="id" th:value="${session.loginMember.id}" readonly>
                 </th>
               </tr>
               <tr>
                 <th class="col2-1 align-middle text-center">제목</th>
                 <th class="col-5 text-center">
-                <input class="form-control" type="text" name="title" id="text-input" placeholder="제목을 입력해 주세요" value="${board.title}">
+                <input class="form-control" type="text" name="title" id="text-input" th:value="${board.title}">
                 </th>
               </tr>
               <tr>
                 <th class=" align-middle text-center">첨부파일</th>
                 <th class="col-5 text-center"><input class="form-control" type="file" name="upfile" id="file-input"></th>
+                <th:block th:if="${board.originalFileName != null}"><br>
+							현재 업로드 파일 :
+							<a>
+								[[${board.originalFileName}]]
+							</a>
+						</th:block>
                 
               </tr>
               <tr>
                 <th class=" align-middle text-center">내용</th>
                 <td class="col-5 text-center">
-                <textarea class="form-control hei" id="textarea-input" rows="5" placeholder="내용을 입력해 주세요.">[[${board.content}]]</textarea>
+                <textarea  class="form-control hei" id="textarea-input" rows="5" name="content" placeholder="내용을 입력해 주세요.">[[${board.content}]]</textarea>
                 </td>
               </tr>
             </thead>
